--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -102,3 +102,4 @@ obj-$(CONFIG_JS_RTC)		+= js-rtc.o
 js-rtc-y = rtc.o
 
 obj-$(CONFIG_TI816X_PCIE_BOOTDRV) += ti816x_pcie_bootdrv.o
+obj-$(CONFIG_ZL38005)		+= zl38005.o
