OMAP: B101EW05 Panel support
Signed-off-by: Roberto Cerati <roberto.cerati@bticino.it>
Signed-off-by: Raffaele Recalcati <raffaele.recalcati@bticino.it>

--- a/drivers/video/omap2/displays/Kconfig
+++ b/drivers/video/omap2/displays/Kconfig
@@ -51,4 +51,10 @@ config PANEL_CPT_CLAA102NA0DCW
         help
           LCD panel driver for CPT CLAA102NA0DCW
 
+config PANEL_AUO_B101EW05
+        tristate "AUO B101EW05 Panel"
+        depends on OMAP2_DSS
+        help
+          LCD panel driver for AUO B101EW05
+
 endmenu
