OMAP3: Baia board support
This board file include the principal board support.
Also CLAA102NA0DCW, B101EW05 panels are supported
and possible to be choosen from command line in order
to compare without changing the kernel.

Signed-off-by: Raffaele Recalcati <raffaele.recalcati@bticino.it>

--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -195,6 +195,8 @@ obj-$(CONFIG_MACH_OVERO)		+= board-overo.o \
 obj-$(CONFIG_MACH_OMAP3EVM)		+= board-omap3evm.o \
 					   hsmmc.o \
 					   board-flash.o
+obj-$(CONFIG_MACH_OMAP3_BAIA)		+= board-omap3baia.o \
+					   hsmmc.o
 obj-$(CONFIG_MACH_OMAP3_PANDORA)	+= board-omap3pandora.o \
 					   hsmmc.o
 obj-$(CONFIG_MACH_OMAP_3430SDP)		+= board-3430sdp.o \
@@ -280,4 +282,9 @@ endif
 ifeq ($(CONFIG_MACH_OMAP3EVM),y)
 evm-camera-$(CONFIG_VIDEO_OMAP3)	:= board-omap3evm-camera.o
 obj-y					+= $(evm-camera-m) $(evm-camera-y)
+endif
+
+ifeq ($(CONFIG_MACH_OMAP3_BAIA),y)
+evm-camera-$(CONFIG_VIDEO_OMAP3)	:= board-omap3baia-camera.o
+obj-y					+= $(baia-camera-m) $(baia-camera-y)
 endif
