usb gadget fixup
Signed-off-by: Rodolfo Giometti <giometti@linux.it>
Signed-off-by: Raffaele Recalcati <raffaele.recalcati@bticino.it>

--- a/arch/arm/configs/omap3_baia_defconfig
+++ b/arch/arm/configs/omap3_baia_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.37 Kernel Configuration
-# Wed Apr 18 18:10:58 2012
+# Wed May  9 12:42:40 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1840,7 +1840,7 @@ CONFIG_USB_DEVICEFS=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 CONFIG_USB_SUSPEND=y
-CONFIG_USB_OTG=y
+# CONFIG_USB_OTG is not set
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MON is not set
@@ -1879,10 +1879,9 @@ CONFIG_USB_MUSB_OMAP2PLUS=y
 # CONFIG_USB_MUSB_BLACKFIN is not set
 # CONFIG_USB_MUSB_UX500 is not set
 # CONFIG_USB_MUSB_HOST is not set
-# CONFIG_USB_MUSB_PERIPHERAL is not set
-CONFIG_USB_MUSB_OTG=y
+CONFIG_USB_MUSB_PERIPHERAL=y
+# CONFIG_USB_MUSB_OTG is not set
 CONFIG_USB_GADGET_MUSB_HDRC=y
-CONFIG_USB_MUSB_HDRC_HCD=y
 # CONFIG_MUSB_PIO_ONLY is not set
 CONFIG_USB_INVENTRA_DMA_HW=y
 # CONFIG_USB_TI_CPPI_DMA_HW is not set
