Omap3: Baia Board: added MADC / HWMON support
This support allows to read i2_input of the present companion chip:
TPS65930 (U7502A board)
TPS65951 (U7503A board)

Signed-off-by: Raffaele Recalcati <raffaele.recalcati@bticino.it>

--- a/arch/arm/configs/omap3_baia_defconfig
+++ b/arch/arm/configs/omap3_baia_defconfig
@@ -1357,6 +1357,7 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_TMP102 is not set
 # CONFIG_SENSORS_TMP401 is not set
 # CONFIG_SENSORS_TMP421 is not set
+CONFIG_SENSORS_TWL4030_MADC=y
 # CONFIG_SENSORS_VT1211 is not set
 # CONFIG_SENSORS_W83781D is not set
 # CONFIG_SENSORS_W83791D is not set
@@ -1406,6 +1407,7 @@ CONFIG_MFD_SUPPORT=y
 # CONFIG_TPS65010 is not set
 # CONFIG_TPS6507X is not set
 CONFIG_TWL4030_CORE=y
+CONFIG_TWL4030_MADC=y
 CONFIG_TWL4030_POWER=y
 # CONFIG_TWL4030_CODEC is not set
 CONFIG_TWL6030_PWM=y
