ASoC: Baia board through tp65951 audio support
Signed-off-by: Raffaele Recalcati <raffaele.recalcati@bticino.it>

--- a/sound/soc/omap/Kconfig
+++ b/sound/soc/omap/Kconfig
@@ -38,6 +38,16 @@ config SND_OMAP_SOC_OMAP3_BAIA
 	  Say Y if you want to add support for SoC audio on the omap3_baia
 	  board trough aic34 codec.
 
+config SND_OMAP_SOC_OMAP3_BAIA_TWL
+	tristate "SoC Audio support for OMAP3_BAIA board through twl4030"
+	depends on SND_OMAP_SOC && MACH_OMAP3_BAIA
+	select SND_OMAP_SOC_MCBSP
+	select SND_OMAP_SOC_I2S
+	select SND_SOC_TWL4030
+	help
+	  Say Y if you want to add support for SoC audio on the omap3_baia
+	  board trough twl4030 codec.
+
 config SND_OMAP_SOC_AMS_DELTA
 	tristate "SoC Audio support for Amstrad E3 (Delta) videophone"
 	depends on SND_OMAP_SOC && MACH_AMS_DELTA
