--- a/sound/soc/omap/Kconfig
+++ b/sound/soc/omap/Kconfig
@@ -35,6 +35,7 @@ config SND_OMAP_SOC_OMAP3_BAIA
 	select SND_OMAP_SOC_I2S
 	select SND_SOC_TLV320AIC3X
 	select SND_SOC_TPA2016D2
+	select SND_SOC_ZL38005
 
 	help
 	  Say Y if you want to add support for SoC audio on the omap3_baia
