--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -187,6 +187,16 @@ config ICS932S401
 	  This driver can also be built as a module. If so, the module
 	  will be called ics932s401.
 
+config MCP453X
+	tristate "MCP453X potentiometer"
+	depends on I2C
+	help
+	  If you say yes here you get support for the Mcp453X
+	  potentiometer.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called mcp453x.
+
 config ATMEL_SSC
 	tristate "Device driver for Atmel SSC peripheral"
 	depends on AVR32 || ARCH_AT91
