--- a/arch/arm/configs/omap3_baia_defconfig
+++ b/arch/arm/configs/omap3_baia_defconfig
@@ -2002,7 +2002,7 @@ CONFIG_USB_OTG_UTILS=y
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_ISP1301_OMAP is not set
 # CONFIG_USB_ULPI is not set
-# CONFIG_TWL4030_USB is not set
+CONFIG_TWL4030_USB=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
