OMAP3: Baia Board: config changed
Support for CONFIG_MCP453X added.
Removed compilation of CONFIG_SND_OMAP_SOC_OMAP3_BAIA_TWL
because is already included in CONFIG_SND_OMAP_SOC_OMAP3_BAIA
board file.

Signed-off-by: Raffaele Recalcati <raffaele.recalcati@bticino.it>

--- a/arch/arm/configs/omap3_baia_defconfig
+++ b/arch/arm/configs/omap3_baia_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.37 Kernel Configuration
-# Fri Jul 27 19:14:12 2012
+# Thu Sep 13 16:57:55 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -828,6 +828,7 @@ CONFIG_BLK_DEV_RAM_SIZE=40960
 CONFIG_MISC_DEVICES=y
 # CONFIG_AD525X_DPOT is not set
 # CONFIG_ICS932S401 is not set
+CONFIG_MCP453X=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
@@ -1766,7 +1767,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_OMAP_SOC=y
 CONFIG_SND_OMAP_SOC_MCBSP=y
 CONFIG_SND_OMAP_SOC_OMAP3_BAIA=y
-CONFIG_SND_OMAP_SOC_OMAP3_BAIA_TWL=y
+# CONFIG_SND_OMAP_SOC_OMAP3_BAIA_TWL is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_TLV320AIC3X=y
